# mlx

./: .gitignore  BINARIES.md  CMakeLists.txt  LICENSE  LLM.md  ONNX.md  PLATFORM_SUPPORT.md  README.md  README_GO.md  TEST_STATUS.md  backend_detection.go  benchmark.c  context_ops.go  demo.go  go.mod  lux-gpu.pc.in  metal_bridge.go  mlx.go  mlx_all_test.go  mlx_c_api.cpp  mlx_c_api.h  mlx_cgo.go  mlx_cpu.go  mlx_cuda.go  mlx_fallback.go  mlx_metal.go  mlx_metal_test.go  mlx_onnx.go  mlx_onnx_stub.go  mlx_onnx_test.go  multigpu.go  nocgo.go  test_memory.go  test_performance.go  test_realistic_perf.go
.github/workflows/: build-gpu-backends.yml  build-release.yml  cpp-release.yml  docs.yml  matrix-test.yml  test.yml
backend/cpu/: cpu_backend.cpp
backend/cuda/: cuda_kernel_loader.cpp  cuda_kernels.cu  cuda_plugin.cpp
backend/dawn/: dawn_backend.cpp
backend/metal/: metal_backend.mm  metal_kernel_loader.mm  metal_plugin.mm
backend/webgpu/: webgpu_kernel_loader.cpp  webgpu_plugin.cpp
benchmarks/: CMakeLists.txt  bench_all.cpp  bench_common.hpp  bench_crypto.cpp  bench_fhe.cpp  bench_tensor.cpp
cmake/: EmbedKernels.cmake  GenerateKernelHeader.cmake  LuxLibrary.cmake  lux-gpu.pc.in
docs/: .gitignore  next.config.mjs  package-lock.json  package.json  source.config.ts
docs/.source/: index.ts  source.config.mjs
docs/app/: layout.tsx  page.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/content/docs/: index.mdx  installation.mdx  meta.json
docs/content/docs/api/: creation.mdx  fft.mdx  linalg.mdx  ops.mdx
docs/content/docs/backends/: cpu.mdx  cuda.mdx  metal.mdx
docs/content/docs/concepts/: arrays.mdx  memory.mdx  streams.mdx
docs/content/docs/integration/: cmake.mdx  go.mdx
examples/: benchmark_backends.go.txt  detect_backend.go.txt
go/: Makefile  README.md  mlx.go  mlx_nocgo.go  mlx_test.go  setup.sh
go/examples/: main.go
go/examples/simple/: main.go
include/lux/: gpu.h
include/lux/gpu/: backend.h  backend_plugin.h  crypto.h  crypto_backend.h  gpu.h  kernel_loader.h  zk.h
kernels/cpu/: tensor_ops.c  tensor_ops.h
kernels/cuda/: tensor_ops.cu  tensor_ops.h
kernels/cuda/crypto/: attestation.cu  blake3.cu  bls12_381.cu  bn254.cu  frost_aggregate.cu  frost_nonce.cu  goldilocks.cu  kzg.cu  mldsa_verify.cu  modular.cu  msm.cu  poseidon.cu  poseidon2_bn254.cu  ringtail_ops.cu  ringtail_sign.cu  ringtail_verify.cu  secp256k1.cu  shamir_interpolate.cu
kernels/cuda/fhe/: blind_rotate.cu  blind_rotate_fused.cu  bsk_prefetch.cu  external_product_batch.cu  external_product_fused.cu  fhe_kernels.cu  four_step_ntt.cu  fused_external_product.cu  ntt_four_step.cu  ntt_kernels.cu  ntt_unified_memory.cu  scheme_switch.cu  tfhe_bootstrap.cu  tfhe_external_product.cu  tfhe_keyswitch.cu  tfhe_sample_extract.cu  twiddle_cache.cu
kernels/cuda/gpu/: arange.cu  arg_reduce.cu  binary.cu  binary_two.cu  conv.cu  copy.cu  dex_swap.cu  fence.cu  fft.cu  fp_quantized.cu  fp_quantized_nax.cu  gemv.cu  gemv_masked.cu  layer_norm.cu  logsumexp.cu  matrix_vector.cu  ntt.cu  poly_mul.cu  quantized.cu  quantized_nax.cu  random.cu  reduce.cu  rms_norm.cu  rope.cu  scaled_dot_product_attention.cu  scan.cu  softmax.cu  sort.cu  ternary.cu  unary.cu
kernels/cuda/lattice/: ntt.cu  ntt_negacyclic.cu  poly_arithmetic.cu  sample_ntt.cu  twiddle.cu
kernels/cuda/steel/attention/: attention.cu  flash.cu  paged.cu  splitk.cu  steel_attention.cu  steel_attention_nax.cu
kernels/cuda/steel/conv/: conv.cu  conv_channels_first.cu  conv_channels_last.cu  depthwise.cu  steel_conv.cu  steel_conv_general.cu
kernels/cuda/steel/gemm/: batched.cu  gemm.cu  steel_gemm_fused.cu  steel_gemm_fused_nax.cu  steel_gemm_gather.cu  steel_gemm_gather_nax.cu  steel_gemm_masked.cu  steel_gemm_segmented.cu  steel_gemm_splitk.cu
kernels/metal/: tensor_ops.metal
kernels/metal/crypto/: attestation.metal  blake3.metal  bls12_381.metal  bn254.metal  frost_aggregate.metal  frost_nonce.metal  goldilocks.metal  kzg.metal  mldsa_verify.metal  msm.metal  poseidon.metal  poseidon2_bn254.metal  ringtail_sign.metal  ringtail_verify.metal  secp256k1.metal
kernels/metal/fhe/: blind_rotate.metal  blind_rotate_fused.metal  bsk_prefetch.metal  external_product_batch.metal  external_product_fused.metal  fhe_kernels.metal  four_step_ntt.metal  fused_external_product.metal  ntt_four_step.metal  ntt_kernels.metal  ntt_metal_kernel.metal  ntt_unified_memory.metal  scheme_switch.metal  tfhe_bootstrap.metal  tfhe_external_product.metal  tfhe_keyswitch.metal  tfhe_sample_extract.metal  twiddle_cache.metal
kernels/metal/gpu/: dex_swap.metal  matrix_vector.metal  ntt.metal
kernels/metal/lattice/: ntt_kernels.metal  ntt_negacyclic.metal  poly_mul.metal  sample_ntt.metal  twiddle.metal
kernels/wgsl/: attestation.wgsl  bls12_381.wgsl  bn254.wgsl  dex_swap.wgsl  goldilocks.wgsl  kzg.wgsl  mldsa_verify.wgsl  modular.wgsl  poseidon.wgsl  poseidon2_bn254.wgsl  ringtail_sign.wgsl  sample_ntt.wgsl  shamir_interpolate.wgsl  tensor_ops.wgsl
metal/: mtl_bridge.h  mtl_bridge.m  mtl_test.go
mlx/: CMakeLists.txt  mlx.h  ntt.h
mlx/backend/metal/: CMakeLists.txt  ntt.cpp
mlx/backend/metal/kernels/: CMakeLists.txt  blake3.metal  blind_rotate.metal  bls12_381.metal  ntt.h  (+15 more)
mlx/backend/webgpu/: CMakeLists.txt
mlx/backend/webgpu/kernels/: blake3.wgsl  blind_rotate.wgsl  fft.wgsl  frost_aggregate.wgsl  frost_nonce.wgsl  msm.wgsl  ntt.wgsl  ntt_negacyclic.wgsl  poly_mul.wgsl  reduce.wgsl  ringtail_verify.wgsl  tfhe_bootstrap.wgsl  tfhe_external_product.wgsl  tfhe_keyswitch.wgsl  twiddle.wgsl
mlx/kernels/: registry.h
mlx/zk/: CMakeLists.txt  zk.cpp  zk.h  zk_c_api.cpp  zk_c_api.h
scripts/: build.sh  download-lib.sh  test-local-backends.sh
src/: backend.cpp  backend.hpp  cpu_backend.cpp  gpu.cpp  gpu_core.cpp  kernel_loader.cpp  plugin_loader.hpp
test/: test_core.cpp  test_cpu.cpp  test_gpu.cpp  test_kernel_loader.cpp
tests/: CMakeLists.txt  test_vectors.h  zk_test.cpp
webgpu/kernels/: CMakeLists.txt
webgpu/kernels/zk/: CMakeLists.txt  merkle.wgsl  poseidon2.wgsl  zk_webgpu.cpp  zk_webgpu.hpp
